[gd_scene load_steps=26 format=2]

[ext_resource path="res://ui/credits.gd" type="Script" id=1]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0002.png" type="Texture" id=2]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0011.png" type="Texture" id=3]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0010.png" type="Texture" id=4]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0000.png" type="Texture" id=5]
[ext_resource path="res://globals/sprites/bg-button_grey.png" type="Texture" id=6]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0006.png" type="Texture" id=7]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0003.png" type="Texture" id=8]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0005.png" type="Texture" id=9]
[ext_resource path="res://globals/sprites/menu_bg.png" type="Texture" id=10]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0008.png" type="Texture" id=11]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0007.png" type="Texture" id=12]
[ext_resource path="res://font/kalam-font/KalamBold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0009.png" type="Texture" id=14]
[ext_resource path="res://globals/sprites/easter eggs/sonjas_blume_col.png" type="Texture" id=15]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0004.png" type="Texture" id=16]
[ext_resource path="res://globals/sprites/z_credits_anim/frame0001.png" type="Texture" id=17]
[ext_resource path="res://font/kalam-font/Kalam.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://font/kalam-font/KalamLight.ttf" type="DynamicFontData" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 17 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "villa",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=5]
size = 72
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="Animation" id=6]

[node name="scene" type="Node2D" groups=[
"ui",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 600.851, 999.659, 801.669 ]
}

[node name="bg" type="TextureRect" parent="."]
margin_top = 2.0
margin_right = 4000.0
margin_bottom = 3002.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="side_flower" type="TextureRect" parent="."]
margin_left = -90.5098
margin_top = 65.054
margin_right = 690.49
margin_bottom = 1962.06
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 799.712, 171.98 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "villa"
frame = 1
playing = true

[node name="Credits_EN" type="RichTextLabel" parent="."]
visible = false
margin_left = 332.0
margin_top = 278.0
margin_right = 1421.0
margin_bottom = 1052.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b]CREDITS  [BETA][/b]

[b]The Villains Version 1.0 Development team[/b] 

[b]Project Management[/b]  - Sonja Heinze
[b]Game design[/b]  - Sonja Heinze, Marie-Laure Steinfeltz
[b]Art design[/b]  - Marie-Laure Steinfeltz
[b]Character design[/b]  - Marie-Laure Steinfeltz
[b]2D UI design[/b]  - Marie-Laure Steinfeltz
[b]Room design*[/b] - Marie-Laure Steinfeltz
[b]Programming [/b] - Sonja Heinze
[b]Music & Sound[/b]  - Sonja Heinze, Marie-Laure Steinfeltz
[b]Text & Scripting (English) [/b] - Sonja Heinze, Marie-Laure Steinfeltz
[b]Translations (German and French)[/b] - Marie-Laure Steinfeltz
[b]Project review[/b] - Sophie Toulouze

[i] *The room design and certain object designs, such as furniture and paintings, as well as pictures of the Family Majorelle are based on the 2020 Saar-Lor-Lux Coding da Vinci Dataset by the Villa Majorelle which is licensed under CC BY-SA 3.0 FR.[/i] 

[b]Coding da Vinci[/b]
The idea and prototype development for MajorelleMystery started as part of the “Coding da Vinci Saar-Lor-Lux 2020” hackathon for open cultural data. Further development for this version 1.0 was made possible through the generous Coding da Vinci-Stipends.

[b]Escoria[/b]
The game is based on the point & click adventure game framework for Godot Engine “Escoria” and has been built upon the demo video game “Escoria in Daïza” developed by Élisa de Castro Guerra, Cédric Gémy, Ariel Manzur, Camille \"nylnook\" Bissuel, Gaëtan \"Reptifur\" Hilt, Adrien \"Kooda\" Ramos licensed under the MIT License (MIT).

[b]We’d like to thank ...[/b]

[b]Our original team members[/b] - Lea-Kathrin Gleissner, Paul Hermann, Melisa Kujevic, Jörg Reichert, Berenike Reisinghoff, Sophie Toulouze and the [b]“helping hands” [/b] Torsten Röder, Anastasia Bauch, Daniel Haas, Annika Rockenberger.

[b]Our testers [/b] - Anne und Thomas Steinfeltz, Christian Hartmann, Sarah Grau, Stephen Bett, Autumn Abbas, VioVodka, ...

[b]… and of course the Coding da Vinci team and the Villa Majorelle for making this possible![/b]"
text = "CREDITS  [BETA]

The Villains Version 1.0 Development team 

Project Management  - Sonja Heinze
Game design  - Sonja Heinze, Marie-Laure Steinfeltz
Art design  - Marie-Laure Steinfeltz
Character design  - Marie-Laure Steinfeltz
2D UI design  - Marie-Laure Steinfeltz
Room design* - Marie-Laure Steinfeltz
Programming  - Sonja Heinze
Music & Sound  - Sonja Heinze, Marie-Laure Steinfeltz
Text & Scripting (English)  - Sonja Heinze, Marie-Laure Steinfeltz
Translations (German and French) - Marie-Laure Steinfeltz
Project review - Sophie Toulouze

 *The room design and certain object designs, such as furniture and paintings, as well as pictures of the Family Majorelle are based on the 2020 Saar-Lor-Lux Coding da Vinci Dataset by the Villa Majorelle which is licensed under CC BY-SA 3.0 FR. 

Coding da Vinci
The idea and prototype development for MajorelleMystery started as part of the “Coding da Vinci Saar-Lor-Lux 2020” hackathon for open cultural data. Further development for this version 1.0 was made possible through the generous Coding da Vinci-Stipends.

Escoria
The game is based on the point & click adventure game framework for Godot Engine “Escoria” and has been built upon the demo video game “Escoria in Daïza” developed by Élisa de Castro Guerra, Cédric Gémy, Ariel Manzur, Camille \"nylnook\" Bissuel, Gaëtan \"Reptifur\" Hilt, Adrien \"Kooda\" Ramos licensed under the MIT License (MIT).

We’d like to thank ...

Our original team members - Lea-Kathrin Gleissner, Paul Hermann, Melisa Kujevic, Jörg Reichert, Berenike Reisinghoff, Sophie Toulouze and the “helping hands”  Torsten Röder, Anastasia Bauch, Daniel Haas, Annika Rockenberger.

Our testers  - Anne und Thomas Steinfeltz, Christian Hartmann, Sarah Grau, Stephen Bett, Autumn Abbas, VioVodka, ...

… and of course the Coding da Vinci team and the Villa Majorelle for making this possible!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits_DE" type="RichTextLabel" parent="."]
visible = false
margin_left = 332.0
margin_top = 278.0
margin_right = 1421.0
margin_bottom = 1052.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b]CREDITS  [BETA] [/b]

[b]\"The Villains\" Version 1.0 Entwicklungsteam[/b] 

[b]Projektmanagement[/b]  - Sonja Heinze
[b]Spielgestaltung[/b]  - Sonja Heinze, Marie-Laure Steinfeltz
[b]Künstlerische Gestaltung [/b]  - Marie-Laure Steinfeltz
[b]Charakterdesign[/b]  - Marie-Laure Steinfeltz
[b]2D UI Gestaltung[/b]  - Marie-Laure Steinfeltz
[b]Raumdesign*[/b] - Marie-Laure Steinfeltz
[b]Programmierung [/b] - Sonja Heinze
[b]Musik & Ton[/b]  - Sonja Heinze, Marie-Laure Steinfeltz
[b]Text (Englisch) [/b] - Sonja Heinze, Marie-Laure Steinfeltz
[b]Übersetzungen (Deutsch und Französisch)[/b] - Marie-Laure Steinfeltz
[b]Projektabnahme[/b] - Sophie Toulouze

[i] *Das Raumdesign und bestimmte Objektdesigns, wie Möbel und Gemälde, sowie Bilder der Familie Majorelle basieren auf dem 2020 Saar-Lor-Lux Coding da Vinci Datensatz der Villa Majorelle, der unter CC BY-SA 3.0 FR lizenziert ist.[/i] 

[b]Coding da Vinci[/b]
Die Idee und Prototypentwicklung für MajorelleMystery begann im Rahmen des \"Coding da Vinci Saar-Lor-Lux 2020\" Hackathons für offene Kulturdaten. Die weitere Entwicklung für diese Version 1.0 wurde durch die großzügigen Coding da Vinci-Stipendien ermöglicht.

[b]Escoria[/b]
Das Spiel basiert auf dem Point & Click-Adventure-Game-Framework für die Godot Engine \"Escoria\" und wurde auf dem Demo-Videospiel \"Escoria in Daïza\" aufgebaut, das von Élisa de Castro Guerra, Cédric Gémy, Ariel Manzur, Camille \"nylnook\" Bissuel, Gaëtan \"Reptifur\" Hilt, Adrien \"Kooda\" Ramos unter der MIT-Lizenz (MIT) lizenziert wurde.

[b]Wir möchten uns außerdem herzlich bei folgenden Personen bedanken ...[/b]

[b]Unsere ursprünglichen Teammitglieder [/b] - Lea-Kathrin Gleissner, Paul Hermann, Melisa Kujevic, Jörg Reichert, Berenike Reisinghoff, Sophie Toulouze und die [b]“und die \"helfenden Hände\" [/b] Torsten Röder, Anastasia Bauch, Daniel Haas, Annika Rockenberger.

[b]Unsere Tester[/b] - Anne und Thomas Steinfeltz, Christian Hartmann, Sarah Grau, Stephen Bett, Autumn Abbas, VioVodka, ...

[b]… ... und natürlich bei dem Team von Coding da Vinci und der Villa Majorelle, ohne die das alles nicht möglich gewesen wäre![/b]"
text = "CREDITS  [BETA] 

\"The Villains\" Version 1.0 Entwicklungsteam 

Projektmanagement  - Sonja Heinze
Spielgestaltung  - Sonja Heinze, Marie-Laure Steinfeltz
Künstlerische Gestaltung   - Marie-Laure Steinfeltz
Charakterdesign  - Marie-Laure Steinfeltz
2D UI Gestaltung  - Marie-Laure Steinfeltz
Raumdesign* - Marie-Laure Steinfeltz
Programmierung  - Sonja Heinze
Musik & Ton  - Sonja Heinze, Marie-Laure Steinfeltz
Text (Englisch)  - Sonja Heinze, Marie-Laure Steinfeltz
Übersetzungen (Deutsch und Französisch) - Marie-Laure Steinfeltz
Projektabnahme - Sophie Toulouze

 *Das Raumdesign und bestimmte Objektdesigns, wie Möbel und Gemälde, sowie Bilder der Familie Majorelle basieren auf dem 2020 Saar-Lor-Lux Coding da Vinci Datensatz der Villa Majorelle, der unter CC BY-SA 3.0 FR lizenziert ist. 

Coding da Vinci
Die Idee und Prototypentwicklung für MajorelleMystery begann im Rahmen des \"Coding da Vinci Saar-Lor-Lux 2020\" Hackathons für offene Kulturdaten. Die weitere Entwicklung für diese Version 1.0 wurde durch die großzügigen Coding da Vinci-Stipendien ermöglicht.

Escoria
Das Spiel basiert auf dem Point & Click-Adventure-Game-Framework für die Godot Engine \"Escoria\" und wurde auf dem Demo-Videospiel \"Escoria in Daïza\" aufgebaut, das von Élisa de Castro Guerra, Cédric Gémy, Ariel Manzur, Camille \"nylnook\" Bissuel, Gaëtan \"Reptifur\" Hilt, Adrien \"Kooda\" Ramos unter der MIT-Lizenz (MIT) lizenziert wurde.

Wir möchten uns außerdem herzlich bei folgenden Personen bedanken ...

Unsere ursprünglichen Teammitglieder  - Lea-Kathrin Gleissner, Paul Hermann, Melisa Kujevic, Jörg Reichert, Berenike Reisinghoff, Sophie Toulouze und die “und die \"helfenden Hände\"  Torsten Röder, Anastasia Bauch, Daniel Haas, Annika Rockenberger.

Unsere Tester - Anne und Thomas Steinfeltz, Christian Hartmann, Sarah Grau, Stephen Bett, Autumn Abbas, VioVodka, ...

… ... und natürlich bei dem Team von Coding da Vinci und der Villa Majorelle, ohne die das alles nicht möglich gewesen wäre!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits_FR" type="RichTextLabel" parent="."]
visible = false
margin_left = 332.0
margin_top = 278.0
margin_right = 1421.0
margin_bottom = 1052.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b]Générique  [BETA][/b]

[b]L'équipe de développement de la version 1.0 de Villains[/b] 

[b]Gestion de projet[/b]  - Sonja Heinze
[b]Conception de jeux[/b]  - Sonja Heinze, Marie-Laure Steinfeltz
[b]Conception artistique[/b]  - Marie-Laure Steinfeltz
[b]Conception des personnages[/b]  - Marie-Laure Steinfeltz
[b]2D UI design[/b]  - Marie-Laure Steinfeltz
[b]Design des pièces de la villa*[/b] - Marie-Laure Steinfeltz
[b]Programmation [/b] - Sonja Heinze
[b]Musique et son[/b]  - Sonja Heinze, Marie-Laure Steinfeltz
[b]Texte (anglais)[/b] - Sonja Heinze, Marie-Laure Steinfeltz
[b]Traductions (allemand et français)[/b] - Marie-Laure Steinfeltz
[b]Réception du projet[/b] - Sophie Toulouze

[i] *La design des pièces et de certains objets, tels que des meubles et les tableaux, ainsi que les photos de la famille Majorelle sont fondés sur l'ensemble de données Saar-Lor-Lux Coding da Vinci 2020 de la Villa Majorelle, qui est sous licence CC BY-SA 3.0 FR.[/i] 

[b]Coding da Vinci[/b]
L'idée et le développement du prototype de MajorelleMystery ont débuté dans le cadre du \"Coding da Vinci Saar-Lor-Lux 2020\", un hackathon pour les données culturelles ouvertes. Le développement de cette version 1.0 a été rendu possible grâce aux généreuses bourses distribuées par Coding da Vinci.

[b]Escoria[/b]
Le jeu est fondé sur le framework de jeu d'aventure point & click pour Godot. \"Escoria\" et a été construit sur la base du jeu vidéo de démonstration \"Escoria in Daïza\" développé par Élisa de Castro Guerra, Cédric Gémy, Ariel Manzur, Camille \"nylnook\" Bissuel, Gaëtan \"Reptifur\" Hilt, Adrien \"Kooda\" Ramos sous la licence MIT (MIT).

[b]Nous tenons à remercier ...[/b]

[b]Les membres de notre équipe d'origine [/b] - Lea-Kathrin Gleissner, Paul Hermann, Melisa Kujevic, Jörg Reichert, Berenike Reisinghoff, Sophie Toulouze and the [b]et les \"mains de secours\" [/b] Torsten Röder, Anastasia Bauch, Daniel Haas, Annika Rockenberger.

[b]Nos testeurs[/b] - Anne und Thomas Steinfeltz, Christian Hartmann, Sarah Grau, Stephen Bett, Autumn Abbas, VioVodka, ...

[b]... et bien sûr l'équipe de Coding da Vinci et la Villa Majorelle sans lesquels ce projet n'aurait pas été réalisable![/b]"
text = "Générique  [BETA]

L'équipe de développement de la version 1.0 de Villains 

Gestion de projet  - Sonja Heinze
Conception de jeux  - Sonja Heinze, Marie-Laure Steinfeltz
Conception artistique  - Marie-Laure Steinfeltz
Conception des personnages  - Marie-Laure Steinfeltz
2D UI design  - Marie-Laure Steinfeltz
Design des pièces de la villa* - Marie-Laure Steinfeltz
Programmation  - Sonja Heinze
Musique et son  - Sonja Heinze, Marie-Laure Steinfeltz
Texte (anglais) - Sonja Heinze, Marie-Laure Steinfeltz
Traductions (allemand et français) - Marie-Laure Steinfeltz
Réception du projet - Sophie Toulouze

 *La design des pièces et de certains objets, tels que des meubles et les tableaux, ainsi que les photos de la famille Majorelle sont fondés sur l'ensemble de données Saar-Lor-Lux Coding da Vinci 2020 de la Villa Majorelle, qui est sous licence CC BY-SA 3.0 FR. 

Coding da Vinci
L'idée et le développement du prototype de MajorelleMystery ont débuté dans le cadre du \"Coding da Vinci Saar-Lor-Lux 2020\", un hackathon pour les données culturelles ouvertes. Le développement de cette version 1.0 a été rendu possible grâce aux généreuses bourses distribuées par Coding da Vinci.

Escoria
Le jeu est fondé sur le framework de jeu d'aventure point & click pour Godot. \"Escoria\" et a été construit sur la base du jeu vidéo de démonstration \"Escoria in Daïza\" développé par Élisa de Castro Guerra, Cédric Gémy, Ariel Manzur, Camille \"nylnook\" Bissuel, Gaëtan \"Reptifur\" Hilt, Adrien \"Kooda\" Ramos sous la licence MIT (MIT).

Nous tenons à remercier ...

Les membres de notre équipe d'origine  - Lea-Kathrin Gleissner, Paul Hermann, Melisa Kujevic, Jörg Reichert, Berenike Reisinghoff, Sophie Toulouze and the et les \"mains de secours\"  Torsten Röder, Anastasia Bauch, Daniel Haas, Annika Rockenberger.

Nos testeurs - Anne und Thomas Steinfeltz, Christian Hartmann, Sarah Grau, Stephen Bett, Autumn Abbas, VioVodka, ...

... et bien sûr l'équipe de Coding da Vinci et la Villa Majorelle sans lesquels ce projet n'aurait pas été réalisable!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="."]
margin_left = 942.101
margin_top = 922.199
margin_right = 1454.1
margin_bottom = 1434.2
rect_scale = Vector2( 1.3, 0.7 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_BACK" type="Label" parent="back"]
margin_left = -19.226
margin_top = 201.883
margin_right = 1814.77
margin_bottom = 477.883
rect_scale = Vector2( 0.3, 0.5 )
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.223529, 0.223529, 0.184314, 1 )
custom_colors/font_color_shadow = Color( 0.439216, 0.266667, 0.00784314, 1 )
text = "UI_BACK"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="AnimationPlayer" parent="."]
anims/credits = SubResource( 6 )
